--- a/WeatherApp/src/App.css
+++ b/WeatherApp/src/App.css
@@ -1,166 +1,137 @@
-*{
-    /* background-color: rgb(48, 144, 207); */
-    font-family: Georgia, 'Times New Roman', Times, serif;
-  }
-  
-  body{
-    margin: 0;
-    padding: 0;
-    background-color: rgb(7, 79, 128);
-    width : 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .container{
-    width: 350px;
-    padding: 20px;
-    background-color: aliceblue;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgb(0, 236, 253);
-  }
-  
-  .input-container{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    border: 2px solid lightseagreen;
-    border-radius: 10px;
-    overflow: hidden;
-  }
-  
-  .cityInput{
-    flex: 1;
-    height: 30px;
-    border: none;
-    font-size: 16px;
-    outline: none;
-    padding: 10px;
-  }
-  
-  .search-icon{
-    padding: 10px;
-    height:30px;
-    cursor: pointer;
-  } 
-  
-  .search-icon img{
-    margin-top: 5px;
-  }
-  
-  .image{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 150px;
-    margin-bottom: 10px; /* Adjust as necessary */
-  }
-  
-  .image img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-    width: 100px;
-    margin-bottom: 10px;
-
-  }
-
- .temp,
- .city,
- .country{
-
- /* margin-top: 010px; */
- font-size: 35px;
- color: #333;
- text-transform: uppercase;
- text-align: center;
+* {
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.temp{
-
-font-weight: 500;
-
+body {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(7, 79, 128);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.city{
-
- color: #ffbc00;
- font-weight: 400;
- font-size: 40px;
-
-
+.container {
+  width: 350px;
+  padding: 20px;
+  background-color: aliceblue;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgb(0, 236, 253);
 }
 
-.country{
-
-font-size: 15px;
-color: rgb(45, 85, 0);
-font-weight: 500;
-
-}
- 
-.cord{
-
- display: flex;
- justify-content: center;
- align-items: center;
- margin-top: 10px;
- text-align: center;
- gap: 15px;
-
-
+.input-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  border: 2px solid lightseagreen;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-.cord div{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-
+.cityInput {
+  flex: 1;
+  height: 30px;
+  border: none;
+  font-size: 16px;
+  outline: none;
+  padding: 10px;
 }
 
-.cord div span{
-
- font-size: 14px;
-
-
+.search-icon {
+  padding: 10px;
+  height: 30px;
+  cursor: pointer;
 }
 
-.humdidity-percent,
-.Wind-percent,
-.cord div span:nth-child(2){
-
-
- font-size: 18px;
- font-weight: bold;
- color:rgb(25, 25, 32);
- padding-top:5px ;
-
+.search-icon img {
+  margin-top: 5px;
 }
 
-.data-container{
-
-display: flex;
-justify-content: space-between;
-margin-top: 20px;
+.image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  margin-bottom: 10px;
 }
 
-.element{
-
-text-align: center;
-
-
+.image img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100px;
+  margin-bottom: 10px;
 }
 
-.text{
+.temp,
+.city,
+.country {
+  font-size: 35px;
+  color: #333;
+  text-transform: uppercase;
+  text-align: center;
+}
 
-font-size: 18px;
-color: rgba(5, 1, 1, 0.678);
+.temp {
+  font-weight: 500;
+}
 
+.city {
+  color: #ffbc00;
+  font-weight: 400;
+  font-size: 40px;
+}
 
+.country {
+  font-size: 15px;
+  color: rgb(45, 85, 0);
+  font-weight: 500;
+}
+
+.cord {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  text-align: center;
+  gap: 15px;
+}
+
+.cord div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.cord div span {
+  font-size: 14px;
+}
+
+.humidity-percent,
+.wind-percent,
+.cord div span:nth-child(2) {
+  font-size: 18px;
+  font-weight: bold;
+  color: rgb(25, 25, 32);
+  padding-top: 5px;
+}
+
+.data-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.element {
+  text-align: center;
+}
+
+.text {
+  font-size: 18px;
+  color: rgba(5, 1, 1, 0.678);
 }
